# worf

./: .dockerignore  .gitignore  Dockerfile  Loop.md  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  index.html  package-lock.json  package.json  run.sh  start.sh  supervisord.conf  tailwind.config.js  traefik-dynamic.dev.yml  traefik-dynamic.e2e.yml  traefik-dynamic.yml  traefik.yml  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
apps/workspace-web/: .env.example  .gitignore  Dockerfile  Dockerfile.client-e2e  entrypoint.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.ts
e2e-tests/: package-lock.json  package.json  wdio.conf.js
e2e-tests/specs/: calendar.e2e.js  drag-drop-sprint.e2e.js  note-editing.e2e.js  notes-inline-code.e2e.js  notes.e2e.js  okr.e2e.js  projects.e2e.js  sprint-icon.e2e.js  sprints.e2e.js  terminal.e2e.js
postgres/: init.sh
scripts/: prisma-push.sh
services/auth-service/: .dockerignore  Dockerfile  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.conf.release.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_notes.sql  003_folders_position.sql  004_dates.sql  005_sprints.sql  006_okr.sql  007_board_type.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  boards.rs  chats.rs  folders.rs  mod.rs  notes.rs  okr.rs  pages.rs  pomodoro.rs  providers.rs  sprints.rs  tasks.rs  terminal.rs  url_fetch.rs
(+406 files in other folders)
