[package]
name = "worf"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tauri-plugin-webdriver = { version = "0.2", optional = true }
portable-pty = "0.8"
libc = "0.2"

[features]
webdriver = ["tauri-plugin-webdriver"]

[profile.release]
strip = true
lto = true
codegen-units = 1
